Fix .inline-activity missing spacing

--- a/app/views/user/profile/_activity.scss
+++ b/app/views/user/profile/_activity.scss
@@ -44,6 +44,7 @@
     top: 1px;
     width: 0.75em;
     height: 0.75em;
+    margin: 0 0.125rem;
     line-height: 1;
     cursor: text;
     border-radius: 25%;
